@@ -22,6 +22,13 @@
   (gtype-id "TOTEM_TYPE_CELL_RENDERER_VIDEO")
 )
 
+(define-object VideoList
+  (in-module "Totem")
+  (parent "GtkTreeView")
+  (c-name "TotemVideoList")
+  (gtype-id "TOTEM_TYPE_VIDEO_LIST")
+)
+
 ;; Enumerations and flags ...
 
 (define-enum DiscMediaType
@@ -441,4 +448,23 @@
     '("const-char*" "label")
     '("GtkWindow" "parent")
   )
+)
+
+;; From ../../src/totem-video-list.h
+
+(define-function totem_video_list_new
+  (is-constructor-of "TotemVideoList")
+  (c-name "totem_video_list_new")
+  (return-type "TotemVideoList*")
+  (properties
+    '("tooltip-column" (argname "tooltip_column") (optional))
+    '("mrl-column" (argname "mrl_column") (optional))
+    '("totem" (argname "totem") (optional))
+  )
+)
+
+(define-method get_ui_manager
+  (of-object "TotemVideoList")
+  (c-name "totem_video_list_get_ui_manager")
+  (return-type "GtkUIManager*")
 )
