@@ -10,6 +10,7 @@ headers
 #include "override_common.h"
 #include "totem.h"
 #include "totem-cell-renderer-video.h"
+#include "totem-video-list.h"
 #include "totem-disc.h"
 #include "plugins/totem-plugin.h"
 
