@@ -55,6 +55,7 @@ typedef struct {
 
 GType totem_video_list_get_type (void);
 TotemVideoList *totem_video_list_new (void);
+GtkUIManager *totem_video_list_get_ui_manager (TotemVideoList *self);
 
 G_END_DECLS
 
