@@ -1,5 +1,14 @@
 2008-04-08  Philip Withnall  <pwithnall@svn.gnome.org>
 
+	* bindings/python/totem.defs:
+	* bindings/python/totem.override:
+	* src/plugins/youtube/youtube.py:
+	* src/totem-video-list.c: (totem_video_list_get_ui_manager):
+	* src/totem-video-list.h: Add a menu entry to open YouTube videos in
+	the web browser. (Closes: #521908)
+
+2008-04-08  Philip Withnall  <pwithnall@svn.gnome.org>
+
 	* bindings/python/totem.defs: Remove set_mrl_* functions from the
 	bindings, as they bypass the playlist.
 	* src/plugins/totem-plugin.c:
